--- a/css/style.css
+++ b/css/style.css
@@ -67,5 +67,7 @@ ul{
 }
 
 @media (max-width:679px) {
-/*TODO*/
+    #MyName, #currentPosition{
+        text-align: center;
+    }
 }
